# ZeroSec-Security-System

MapsterMalder1488-main/: CMakeLists.txt  LICENSE  README.md  build.bat
MapsterMalder1488-main/src/common/common/: ensure.ixx  process.ixx  requery.ixx  smart_handle.ixx  virtual_mem.ixx  win_headers.h
MapsterMalder1488-main/src/logger/logger/: main.cxx
MapsterMalder1488-main/src/sample_handles/: map_ids_eu.h  map_ids_melee_us.h  map_ids_us.h
MapsterMalder1488-main/src/sc2rtwp/sc2rtwp/: main.cxx
MapsterMalder1488-main/src/sc2rtwp_in/sc2rtwp_in/: command_pipe.ixx  cs_scriptvar.ixx  debug_delayed_crash.ixx  debug_veh.ixx  logger.ixx
MapsterMalder1488-main/src/test_target/test_target/: main.cxx
release_binaries/: common.lib  handles.txt  handles_eu.txt  handles_kr.txt
src/common/common/: bitfield_ops.h  common.ixx  noncopyable.ixx  numeric.ixx  pipe.ixx
src/sample_handles/: map_ids_kr.h  map_ids_melee_eu.h  map_ids_melee_kr.h
src/sc2rtwp_in/sc2rtwp_in/: antiantitamper.ixx  app.ixx  cs_antitamper.ixx  cs_timingdata.ixx  cs_unit.ixx  debug_stack_protect.ixx  debug_trigger_ids.ixx  game_rtwp.ixx  game_slowmode.ixx  hooker.ixx  main.cxx
